<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <ImageView
        android:id="@+id/bg1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-160dp"
        android:layout_marginTop="-160dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ellipse_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bg2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-120dp"
        android:src="@drawable/ellipse_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/bg3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="-170dp"
        android:layout_marginBottom="-210dp"
        android:importantForAccessibility="no"
        android:src="@drawable/ellipse_3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <ImageView
            android:id="@+id/imgSemaphoreFlag"
            android:layout_width="64dp"
            android:layout_height="36dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_semaphore" />

        <TextView
            android:id="@+id/txtSemaphoreTranslator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/imgSemaphoreFlag"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:text="@string/semaphore_translator"
            android:textSize="16sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btnLearn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txtSemaphoreTranslator"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/white"
            android:gravity="left|center_vertical"
            android:text="@string/learn"
            android:textColor="@color/black_primary"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_learn"
            app:iconSize="@null"
            app:iconTint="@null" />

        <Button
            android:id="@+id/btnChallenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnLearn"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:gravity="left|center_vertical"
            android:text="@string/challenge"
            android:textColor="@color/black_primary"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_practice"
            app:iconSize="@null"
            app:iconTint="@null" />

        <Button
            android:id="@+id/btnTranslate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnChallenge"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:gravity="left|center_vertical"
            android:text="@string/translate"
            android:textColor="@color/black_primary"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_translate"
            app:iconSize="@null"
            app:iconTint="@null" />

        <Button
            android:id="@+id/btnSetting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnTranslate"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/white"
            android:elevation="2dp"
            android:gravity="left|center_vertical"
            android:text="@string/setting"
            android:textColor="@color/black_primary"
            app:cornerRadius="10dp"
            app:icon="@drawable/ic_setting"
            app:iconSize="@null"
            app:iconTint="@null" />

    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>